# we-snark

./: Cargo.toml  README.md
src/: groth16_lv.rs  helpers.rs  iip.rs  inner.rs  lv.rs  lv_gadgets.rs  main.rs  mul_snark.rs  nonzero.rs  recursion.rs  routing.rs  scs.rs  types.rs  verifier.rs  we.rs  we_lv.rs  wit_dec.rs  wit_enc.rs
src/circuits/: mod.rs  outer_verify_inner(manual).rs  outer_verify_inner.rs  simple_mul.rs
src/compiler/: mod.rs
src/gadgets/: arithmetic.rs  linear.rs  mod.rs  traits.rs
